[package]
authors = ["jekto_vatimeliju <jekto.vatimeliju@gmail.com>"]
edition = "2021"
name = "cetkaik_full_state_transition"
version = "0.8.0"
license = "MIT"
description = "The full state transition functions for cetkaik. See https://sites.google.com/view/cet2kaik/%E4%BB%96%E8%A8%80%E8%AA%9E%E7%89%88-other-languages/the-standardized-rule-in-english for more context."
repository = "https://github.com/sozysozbot/cetkaik_full_state_transition"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cetkaik_calculate_hand = { path = "../cetkaik_calculate_hand" }
cetkaik_fundamental = { path = "../cetkaik_fundamental" }
cetkaik_interface = { path = "../cetkaik_interface" }
cetkaik_yhuap_move_candidates = { path = "../cetkaik_yhuap_move_candidates" }
readonly = "0.2.0"
maplit = "1.0.2"
enum_primitive = "0.1.1"
num = "0.4.0"
serde = { version = "1.0.148", features = ["derive"] }
rand = "0.8.4"

[dev-dependencies]
cetkaik_naive_representation = { path = "../cetkaik_naive_representation" }